; ModuleID = '/home/carl/AnghaBench/tig/src/extr_watch.c_watch_no_refresh.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_watch.c_watch_no_refresh.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@opt_refresh_mode = common dso_local global i64 0, align 8
@REFRESH_MODE_MANUAL = common dso_local global i64 0, align 8
@REFRESH_MODE_AFTER_COMMAND = common dso_local global i64 0, align 8
@WATCH_EVENT_AFTER_COMMAND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @watch_no_refresh to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @watch_no_refresh(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @opt_refresh_mode, align 8
  %4 = load i64, i64* @REFRESH_MODE_MANUAL, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %16, label %6

6:                                                ; preds = %1
  %7 = load i64, i64* @opt_refresh_mode, align 8
  %8 = load i64, i64* @REFRESH_MODE_AFTER_COMMAND, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %6
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @WATCH_EVENT_AFTER_COMMAND, align 4
  %13 = icmp ne i32 %11, %12
  br label %14

14:                                               ; preds = %10, %6
  %15 = phi i1 [ false, %6 ], [ %13, %10 ]
  br label %16

16:                                               ; preds = %14, %1
  %17 = phi i1 [ true, %1 ], [ %15, %14 ]
  %18 = zext i1 %17 to i32
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
